--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ env:
   - DJANGO_SETTINGS_MODULE='config.settings.production'
 
 script:
-  - python mamage.py migrate
+  - python manage.py migrate
   - python manage.py test
