--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,9 @@ venv.bak/
 TODO
 node_modules
 .vscode
+.ebextensions
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
