--- a/.gitignore
+++ b/.gitignore
@@ -106,9 +106,9 @@ venv.bak/
 TODO
 node_modules
 .vscode
-.ebextensions
 
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+static
+
+# Elastic Beanstalk
+.elasticbeanstalk
+.ebextensions
