--- a/.gitignore
+++ b/.gitignore
@@ -109,4 +109,7 @@ node_modules
 
 static
 
-.elasticbeanstalk
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
