--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: python
 python:
   - "3.6"
 
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.11.1-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
+
+
 install:
   - pip install -r config/requirements/dev.txt
 
