--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,6 @@ language: python
 python:
   - "3.6"
 
-before_install:
-  - wget https://github.com/mozilla/geckodriver/releases/download/v0.24.0/geckodriver-v0.24.0-linux64.tar.gz
-  - mkdir geckodriver
-  - tar -xzf geckodriver-v0.24.0-linux64.tar.gz -C geckodriver
-  - export PATH=$PATH:$PWD/geckodriver
-
-
 install:
   - pip install -r config/requirements/dev.txt
 
@@ -18,4 +11,4 @@ env:
 
 script:
   - python manage.py migrate
-  - python manage.py test
+  - python manage.py test certhq
